--- a/sidebar_bootstrap/css/sidebar.css
+++ b/sidebar_bootstrap/css/sidebar.css
@@ -26,6 +26,116 @@ body {
     display: none;
 }
 
+
+@media (min-width: 960px) {
+  .navbar .navbar-form {
+    width: 450px;
+  }  
+}
+
+@media (min-width: 750px){
+  .navbar .navbar-form {
+    right: 0;
+    left: 385px;
+    /*width: 360px;*/
+    border-left: 1px solid #c69f05;
+  }
+}
+
+@media (min-width: 700px){
+  .navbar .navbar-form {
+      /*right: 0;*/
+      /*left: 385px;*/
+      /*width: 300px;*/
+      /*border-left: 1px solid #c69f05;*/
+  }
+}
+
+@media (min-width: 750px){
+  .navbar .navbar-form .form-group, .navbar .navbar-form .input-group {
+    width: 100%;
+  }
+}
+
+.navbar .navbar-form {
+    position: absolute;
+    padding: 0;
+    padding-right: 5px;
+    padding-left: 10px;
+    margin-right: 0;
+    margin-left: 0;
+    border: 0;
+    /*-webkit-box-shadow: none;*/
+    box-shadow: none;
+    /*right: 0;*/
+    /*left: 35px;*/
+    /*width: auto;*/
+    /*display: block;*/
+}
+
+@media (min-width: 500px){
+  .navbar .navbar-form {
+      /*left: 220px;*/
+      /*right: 0;*/
+      /*width: auto;*/
+  }
+}
+
+@media (min-width: 500px){
+  .navbar-form {
+      display: block!important;
+  }
+}
+
+/*
+@media (max-width: 370px){
+  .navbar .navbar-form {
+      position: absolute;
+      padding: 0;
+      padding-right: 5px;
+      padding-left: 10px;
+      margin-right: 0;
+      margin-left: 0;
+      border: 0;
+      box-shadow: none;
+      right: 0;
+      left: 35px;
+      width: auto;
+      display: block;
+  }
+}
+*/
+
+
+
+@media (min-width: 750px){
+  .navbar .navbar-form .form-group, .navbar .navbar-form .input-group {
+      width: 100%;
+  }
+}
+
+.btn-inverse {
+    background-color: #363636;
+    background-image: linear-gradient(to bottom,#555,#333);
+    background-repeat: repeat-x;
+    border-color: rgba(0,0,0,.1) rgba(0,0,0,.1) rgba(0,0,0,.25);
+    color: #fff;
+    text-shadow: 0 -1px 0 rgba(0,0,0,.25);
+}
+
+.navbar-toggle {
+  z-index: 1000;
+}
+
+.navbar-toggle .glyphicon {
+    display: block;
+    margin-top: -2px;
+    height: 14px;
+    line-height: 18px;
+    width: 22px;
+    font-size: 130%;
+}
+
 #sidebar-wrapper-fixed {
   z-index: 1000;
   position: fixed;
@@ -51,8 +161,6 @@ body {
   width: 100%;
   margin-bottom: 0;
 }
-
-
 
 #sidebar-wrapper-fixed>.sidebar-nav-fixed>li>a {
   margin-right: 0;
